--- a/cv.html
+++ b/cv.html
@@ -3,7 +3,7 @@
 <head>
 <link rel="stylesheets" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 <title>
-	RESUME
+	RESUME update
 </title>
 <style>
 		h1{text-align:center}
